--- a/examples/metrics/kafka-mirror-maker-2-metrics.yaml
+++ b/examples/metrics/kafka-mirror-maker-2-metrics.yaml
@@ -203,12 +203,13 @@ data:
       type: GAUGE
 
     #kafka.connect:type=MirrorSourceConnector
-    - pattern: kafka.connect.mirror<type=MirrorSourceConnector, target=(.+), topic=(.+), partition=(.+)><>([a-z-_]+)
-      name: kafka_connect_mirror_mirrorsourceconnector_$4
+    - pattern: kafka.connect.mirror<type=MirrorSourceConnector, source=(.+), target=(.+), topic=(.+), partition=(.+)><>([a-z-_]+)
+      name: kafka_connect_mirror_mirrorsourceconnector_$5
       labels:
-        target: "$1"
-        topic: "$2"
-        partition: "$3"
+        source: "$1"
+        target: "$2"
+        topic: "$3"
+        partition: "$4"
       help: "Kafka Mirror Maker 2 Source Connector metrics"
       type: GAUGE
 
