--- a/examples/security/scram-sha-512-auth/mirror-maker-2.yaml
+++ b/examples/security/scram-sha-512-auth/mirror-maker-2.yaml
@@ -252,9 +252,10 @@ spec:
     - source:
         alias: cluster-a
         bootstrapServers: cluster-a-kafka-bootstrap:9093
-        trustedCertificates:
-          - secretName: cluster-a-cluster-ca-cert
-            pattern: "*.crt"
+        tls:
+          trustedCertificates:
+            - secretName: cluster-a-cluster-ca-cert
+              pattern: "*.crt"
         authentication:
           type: scram-sha-512
           username: cluster-a-user
