--- a/pom.xml
+++ b/pom.xml
@@ -107,13 +107,13 @@
         <mockito.version>4.11.0</mockito.version>
         <opentest4j.version>1.2.0</opentest4j.version>
         <jupiter.version>6.0.0</jupiter.version>
-        <strimzi-test-container.version>0.113.0</strimzi-test-container.version>
+        <strimzi-test-container.version>0.114.0-RC1</strimzi-test-container.version>
         <mockserver.version>5.13.2</mockserver.version>
         <valid4j.version>1.1</valid4j.version>
         <javax.json.version>1.1.4</javax.json.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
-        <kindcontainer.version>1.4.10</kindcontainer.version>
-        <testcontainer.version>1.21.3</testcontainer.version>
+        <kindcontainer.version>2.0.0</kindcontainer.version>
+        <testcontainer.version>2.0.2</testcontainer.version>
         <docker-java.version>3.4.0</docker-java.version>
         <junit4.version>4.13.2</junit4.version>
         <skodjob.test-frame.version>1.3.0</skodjob.test-frame.version>
