[system test] [perf] Performance perf report into PR (#12124)
Signed-off-by: see-quick <maros.orsak159@gmail.com>

--- a/.github/actions/systemtests/generate-matrix/pipelines.yaml
+++ b/.github/actions/systemtests/generate-matrix/pipelines.yaml
@@ -392,3 +392,26 @@ pipelines:
     strimzi_rbac_scope: "CLUSTER"
     cluster_operator_install_type: "yaml"
     parallel: 4
+  ###################
+  ### Performance ###
+  ###################
+  # x86-64
+  - agent: "oracle-vm-8cpu-32gb-x86-64"
+    arch: "amd64"
+    pipeline: "performance"
+    profile: "performance"
+    timeout: 180
+    strimzi_feature_gates: ""
+    strimzi_rbac_scope: "CLUSTER"
+    cluster_operator_install_type: "yaml"
+    parallel: 1
+  # arm64
+  - agent: "oracle-vm-8cpu-32gb-arm64"
+    arch: "arm64"
+    pipeline: "performance"
+    profile: "performance"
+    timeout: 180
+    strimzi_feature_gates: ""
+    strimzi_rbac_scope: "CLUSTER"
+    cluster_operator_install_type: "yaml"
+    parallel: 1
