make sure finddoes not fail when receving SIGPIPE
Signed-off-by: see-quick <maros.orsak159@gmail.com>

--- a/.github/actions/systemtests/run-perf-report/action.yml
+++ b/.github/actions/systemtests/run-perf-report/action.yml
@@ -23,7 +23,7 @@ runs:
       shell: bash
       run: |
         echo "Downloaded artifacts:"
-        find "${{ inputs.artifacts-path }}" -type f | head -n 20
+        (find "${{ inputs.artifacts-path }}" -type f || true) | head -n 20
 
     - name: Generate performance report
       id: generate_report
