--- a/api/src/test/resources/crds/v1/047-Crd-kafkaconnector.yaml
+++ b/api/src/test/resources/crds/v1/047-Crd-kafkaconnector.yaml
@@ -83,7 +83,7 @@ spec:
               config:
                 x-kubernetes-preserve-unknown-fields: true
                 type: object
-                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
               state:
                 type: string
                 enum:
