--- a/packaging/install/cluster-operator/047-Crd-kafkaconnector.yaml
+++ b/packaging/install/cluster-operator/047-Crd-kafkaconnector.yaml
@@ -83,7 +83,7 @@ spec:
               config:
                 x-kubernetes-preserve-unknown-fields: true
                 type: object
-                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
               state:
                 type: string
                 enum:
@@ -236,7 +236,7 @@ spec:
               config:
                 x-kubernetes-preserve-unknown-fields: true
                 type: object
-                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max."
+                description: "The Kafka Connector configuration. The following properties cannot be set: name, connector.class, tasks.max, connector.plugin.version."
               pause:
                 type: boolean
                 description: Whether the connector should be paused. Defaults to false.
