Added nimbus-jose-jwt to the third party libraries
Signed-off-by: Shubham Kalloli <shubhamkalloli@Shubhams-MacBook-Pro-2.local>

--- a/docker-images/artifacts/kafka-thirdparty-libs/3.8.x/pom.xml
+++ b/docker-images/artifacts/kafka-thirdparty-libs/3.8.x/pom.xml
@@ -416,5 +416,11 @@
             <artifactId>kafka-env-var-config-provider</artifactId>
             <version>${kafka-env-var-config-provider.version}</version>
         </dependency>
+        <!-- Adding nimbus-jose-jwt as a direct dependency to remediate CVE-2025-53864 -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>${nimbus-jose-jwt.version}</version>
+        </dependency>
     </dependencies>
 </project>
