--- a/.github/workflows/run-system-tests.yml
+++ b/.github/workflows/run-system-tests.yml
@@ -81,14 +81,8 @@ jobs:
           checkName: ${{ matrix.config.jobName }}
           checkDescription: "Test run for ${{ matrix.config.jobName }}"
 
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: 3.9.9
-      - uses: actions/setup-java@v5
-        with:
-          distribution: "temurin"
-          java-version: "17"
+      - name: Setup Java and Maven
+        uses: ./.github/actions/dependencies/setup-java
 
       - name: Install Helm
         uses: ./.github/actions/dependencies/install-helm
